Bug#24148 regression tests hang with SSL enabled  - Don't call SSL_shutdown a second time

vio/viossl.c:
  SSL_shutdown might return 0 indicating that it should be called once
  again for a graceful shutdown. Since the socket are going to be closed
  anyway ther is no need for the second call.